made content model to store beacon content and updated UI to use the new backend apis
